# open-shmup

./: .gitignore  .yarnrc.yml  Cargo.toml  package.json
.github/workflows/: ci.yml
data/: Cargo.toml
data/src/: c64.rs  game_data.rs  lib.rs  point.rs  rect.rs
data/src/c64/: game_data.rs  mod.rs  tile_set.rs
data/src/c64/enemies/: direction.rs  mod.rs  path.rs  path_entry.rs  spawn_at_tilemap_position.rs  tests.rs
data/src/c64/stage/: end_behaviour.rs  mod.rs  scroll_type.rs  stage.rs  stage_set.rs  tests.rs
data/src/c64/tile/: hires_tile.rs  hires_tile_block.rs  mod.rs  multicolour_tile.rs  multicolour_tile_block.rs  tile.rs  tile_block.rs  tile_block_set.rs  tile_decode.rs  tile_set.rs
data/src/ext/: array.rs  mod.rs  read.rs
data/src/geometry/: eight_way_direction.rs  eight_way_path_entry.rs  mod.rs  rect.rs
data/src/image/: mod.rs  srgba_bitmap.rs
data/src/palette/: mod.rs  srgb_colour.rs  srgb_palette.rs
data/src/stage/: mod.rs  stage.rs  stage_set.rs
engine/: .gitignore  Cargo.toml  package.json
engine/src/: colour.rs  hidden_svg.rs  lib.rs  palette.rs  palette_filter.rs  rect.rs  screen.rs  tile_block.rs  tile_block_set.rs  tile_set.rs  xml_namespace.rs
engine/src/ext/: canvas.rs  document.rs  element.rs  mod.rs  option.rs
engine/src/game/: game.rs  mod.rs  stage.rs
engine/src/palette/: colour.rs  linear_rgb_colour.rs  mod.rs  pal_colour.rs  palette.rs  palette_filter.rs  srgb_colour.rs  srgb_palette.rs
engine/src/stage/: mod.rs  stage.rs
engine/src/tile/: mod.rs  tile.rs  tile_block.rs  tile_block_map.rs  tile_block_set.rs  tile_map.rs  tile_set.rs
engine/tests/: placeholder.rs
import/: Cargo.toml
import/src/: main.rs  options.rs
sample-game/: atomsmash.openshmup  index.ts  package.json  tsconfig.json  webpack.config.cjs
sample-game/types/: asset-loaders.d.ts
src/: lib.rs  main.rs
www/: .gitignore  index.ts  package.json
