[package]
name = "open_shmup"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.90"

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
