[package]
name = "open_shmup"
version = "0.0.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "=0.1.7", optional = true }
wasm-bindgen = "=0.2.90"

[dev-dependencies]
wasm-bindgen-test = "=0.3.40"

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
