[package]
name = "open_shmup_engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "=0.1.7", optional = true }
gloo-console = "=0.3.0"
wasm-bindgen = "=0.2.90"
web-sys = { version = "=0.3.67", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
wee_alloc = "=0.4.5"

[dev-dependencies]
wasm-bindgen-test = "=0.3.40"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
