[package]
name = "open_shmup_engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "=0.22.1"
console_error_panic_hook = { version = "=0.1.7", optional = true }
futures = "=0.3.31"
gloo-console = "=0.3.0"
open_shmup_data = { path = "../data" }
wasm-bindgen = { version = "=0.2.101" }
wasm-bindgen-futures = "=0.4.51"
wee_alloc = "=0.4.5"
url = "2.5.0"

[dependencies.web-sys]
version = "=0.3.78"
features = [
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Crypto",
    "CssStyleDeclaration",
    "Document",
    "DomImplementation",
    "HtmlCanvasElement",
    "ImageBitmap",
    "ImageBitmapOptions",
    "ImageData",
    "PremultiplyAlpha",
    "SvgElement",
    "SvgDefsElement",
    "SvgfeColorMatrixElement",
    "SvgFilterElement",
    "Url",
    "XmlSerializer"
]

[dev-dependencies]
wasm-bindgen-test = "=0.3.51"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
